src/css/main.css
/* ... */
.analyser #spectrumType {
  height: 0;
  overflow: hidden;
  opacity: 0;
  left: 5px;
  float: left;
  z-index: 9;
  position: absolute;
  min-width: 150px;
}

.analyser:hover .non-shift #overdrawSpectrumType {
  opacity: 1;
  height: auto;
  transition: opacity 500ms ease-in;
}

.analyser #overdrawSpectrumType {
  height: 0;
  overflow: hidden;
  opacity: 0;
  left: 170px;
  float: left;
  z-index: 9;
  position: absolute;
  min-width: 160px;
}

.analyser .analyser-slider-x {
  left: 975px;
  top: 5px;
  position: absolute;
  z-index: 9;
}

.analyser .analyser-slider-y {
  left: 1085px;
  top: 5px;
  position: absolute;
  z-index: 9;
  writing-mode: vertical-lr;
  direction: rtl;
  height: 100px;
}

.analyser input#analyserMinPSD::-webkit-inner-spin-button,
.analyser input#analyserMinPSD::-webkit-outer-spin-button,
.analyser input#analyserMaxPSD::-webkit-inner-spin-button,
.analyser input#analyserMaxPSD::-webkit-outer-spin-button,
.analyser input#analyserLowLevelPSD::-webkit-inner-spin-button,
.analyser input#analyserLowLevelPSD::-webkit-outer-spin-button,
.analyser input#analyserSegmentLengthPowerAt2::-webkit-inner-spin-button,
.analyser input#analyserSegmentLengthPowerAt2::-webkit-outer-spin-button {
  -webkit-appearance: auto !important;
  -moz-appearance: auto !important;
  appearance: auto !important;
  opacity: 1 !important;
  height: auto !important;
  width: auto !important;
}

.analyser input#analyserMaxPSD {
  width: 50px;
  height: 20px;
  left: 0px;
  top: 30px;
}

.analyser label#analyserMaxPSDLabel {
  position: absolute;
  color: var(--text-secondary);
  left: 0px;
  top: 30px;
  font-size: 12px;
}

.analyser input#analyserMinPSD {
  width: 50px;
  height: 20px;
  left: 0px;
  top: 55px;
}

.analyser label#analyserMinPSDLabel {
  position: absolute;
  color: var(--text-secondary);
  left: 0px;
  top: 55px;
  font-size: 12px;
}

.analyser input#analyserLowLevelPSD {
  width: 50px;
  height: 20px;
  left: 0px;
  top: 80px;
}

.analyser label#analyserLowLevelPSDLabel {
  position: absolute;
  color: var(--text-secondary);
  left: 0px;
  top: 80px;
  font-size: 12px;
}

.analyser input#analyserSegmentLengthPowerAt2 {
  width: 42px;
  height: 20px;
  left: 0px;
  top: 42px;
}

.analyser label#analyserSegmentLengthPowerAt2Label {
  position: absolute;
  color: var(--text-secondary);
  width: 50px;
  height: 20px;
  left: 0px;
  top: 20px;
}

.analyser input.onlyFullScreen {
  display: none;
  padding: 3px;
  margin-right: 3px;
  z-index: 9;
  position: absolute;
}

.analyser label.onlyFullScreen {
  display: none;
  padding: 3px;
  margin-right: 3px;
  z-index: 9;
  position: absolute;
}

.analyser div.onlyFullScreen {
  display: none;
  z-index: 9;
  position: absolute;
}

.analyser,
.map-container,
.log-seek-bar {
  position: absolute;
}

#log-seek-bar {
  width: 100%;
}

#seekbarToolbar {
  position: absolute;
  top: 8px;
  left: 20px;
}

.log-seek-bar #seekbarTypeSelect,
.log-seek-bar .seekBar-selection {
  display: none;
}

.log-seek-bar:hover .non-shift #seekbarTypeUSelect {
  opacity: 1;
  height: auto;
  transition: opacity 500ms ease-in;
}

.log-seek-bar #seekbarTypeUSelect {
  height: 0;
  overflow: hidden;
  opacity: 0;
  z-index: 9;
  position: absolute;
  min-width: 200px;
}

.log-graph video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
}

.configuration-file li {
  font-family: monospace;
  font-size: small;
  margin-left: 10px;
}

.configuration-file li:nth-child(even) {
  background-color: var(--surface-100);
}

html.has-table-overlay .log-field-values {
  position: fixed;
  top: 135px;
  left: 15px;
  width: calc(100% - 30px);
  display: block;
  padding: 9px;
  font-size: small;
  background-color: var(--surface-0);
  border: 1px solid var(--border-color, #e5e5e5);
  border-radius: 6px;
  bottom: 80px;
  overflow-y: auto;
}

html:not(.has-config-overlay) .configuration-file,
html:not(.has-marker) .marker-offset {
  display: none;
}

.configuration-changed {
  background-color: var(--error-transparent-2);
}

.configuration-file h3 {
  background-color: var(--primary-transparent-2);
  margin-top: 2px;
  padding: 5px;
}

.configuration-close {
  float: right;
  color: var(--text-secondary);
  cursor: pointer;
}

html.has-config .configuration-file {
  position: fixed;
  top: 110px;
  left: 15px;
  width: calc(100% - 30px);
  padding: 9px;
  background-color: var(--surface-0);
  border: 1px solid var(--border-color, #e5e5e5);
  border-radius: 6px;
  bottom: 80px;
  overflow-y: hidden;
}

html.has-config .configuration-list {
  height: 580px;
  overflow: hidden;
  overflow-y: scroll;
  margin-top: 5px;
  min-width: 13em;
}

.graph-legend-field {
  margin-bottom: 0.5em;
  cursor: pointer;
  padding-left: 0.7em;
  padding-right: 0.7em;
}

.graph-legend-field-name:hover {
  text-decoration: underline;
}

.graph-legend-field-value {
  float: right;
}

.graph-legend-field-settings {
  font-size: 8px;
  color: var(--button-text);
  opacity: 0.8;
  font-weight: bold;
  padding-left: 0.3em;
}

.graph-legend-field.highlight > .graph-legend-field-settings {
  opacity: 1;
  box-shadow: 0px 0px 2px white;
}

.legend-eye-closed {
  opacity: 0.3;
}

.graph-legend-field-visibility {
  cursor: pointer;
  float: right;
  margin-left: 0.7em;
}

html.has-video .graph-row,
html.has-log .graph-row {
  display: flex;
  position: fixed;
  top: 130px;
  width: calc(100% - 30px);
  bottom: 96px;
}

html.has-video .log-graph {
  height: auto;
}
html.has-video .log-graph video {
  width: 100%;
  height: 100%;
}
html.has-video #graphCanvas {
  background-color: transparent;
}

html:not(.has-analyser-fullscreen) .icon-resize-small {
  display: none;
}

html.has-analyser-fullscreen .icon-resize-full {
  display: none;
}

html.has-analyser .view-analyser-fullscreen {
  visibility: inherit;
}

html:not(.has-analyser) .view-analyser-fullscreen {
  visibility: hidden;
}
/* ... */

